<resources>

    <string name="app_name">Math Ninja</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_options" translatable="false">OptionsActivity</string>
    <string name="img_desc">Background image.</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="wrong">Wrong answer!</string>
    <string name="right">Right answer!</string>
    <string name="difficulty">Difficulty</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level">Level</string>
    <string name="reset_score">Reset score</string>
    <string name="score">Score</string>

</resources>